<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".view.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appTitle"
        android:text="@string/app_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:text="@string/welcome"
        android:layout_below="@id/appTitle"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_below="@id/welcomeText"
        android:text="@string/add_group"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        android:textSize="24sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showButton"
        android:layout_below="@id/addButton"
        android:text="@string/show_groups"
        android:layout_margin="30dp"
        android:textAllCaps="false"
        android:textSize="24sp" />

    </RelativeLayout>
</ScrollView>