<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MemberDetailsFragment">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/noItemSelected"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailLayout"
        android:visibility="gone">

    <TextView
        android:id="@+id/nameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nameInfo"
        android:id="@+id/ageInfoLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_weight="1"
            android:textSize="28sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageInfo"
            android:textSize="28sp"
            android:layout_weight="1"
            android:text="@string/age"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ageInfoLayout"
        android:id="@+id/genderInfoLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/gender"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/genderInfo"
            android:text="@string/gender"
            android:layout_weight="1"
            android:textSize="28sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/genderInfoLayout"
        android:id="@+id/emailInfoLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="1"
            android:textSize="28sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailInfo"
            android:text="@string/email"
            android:layout_weight="1"
            android:textSize="28sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/emailInfoLayout"
        android:id="@+id/phoneInfoLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"
            android:layout_weight="1"
            android:textSize="28sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/phoneInfo"
            android:layout_weight="1"
            android:text="@string/phoneNo"
            android:textSize="28sp"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/phoneInfoLayout"
        android:text="@string/delete"
        android:layout_margin="20dp"
        android:id="@+id/deleteButton"/>
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>